fixes #10 chart tooltip causing horizontal scrollbar

--- a/less/index.less
+++ b/less/index.less
@@ -48,6 +48,7 @@ body{
     background-color: @dark;
     color: white;
     min-height: 100%;
+    overflow-x: hidden;
 }
 
 header{
